--- a/assets/styles/scss/components/_button-backup.scss
+++ b/assets/styles/scss/components/_button-backup.scss
@@ -5,129 +5,83 @@
 // -  <<----------<< General >>---------->>
 
 button {
+  border: 0;
 }
 
 // -  <<----------<< Specific >>---------->>
-
-$height: 65;
-$depth: 6;
-$color: #7fbb98;
-// $text-color: darken($color, 10%);
-$lighten-on-hover: 7%;
-$button-speed: 0.06;
-$timing-function: ease-out;
 
 .button {
   position: relative;
   top: 0;
   display: inline-block;
   width: auto;
-  height: $height + px;
+  height: $button--height + px;
   box-sizing: border-box;
-  padding: 0 (($height/2) + px);
-  border-top: 1px solid lightness(var(--color-secondary), 0.22);
-  border-bottom: 1px solid lightness(var(--color-secondary), 0.2);
+  padding: 0 (($button--height/2) + px);
+  border-top: 1px solid lightness(var(--color-secondary), 1.22);
+  border-bottom: 1px solid lightness(var(--color-secondary), 1.2);
   margin-bottom: 15px;
   margin-left: 5px;
-
-  background: linear-gradient(
-    to bottom,
+  background:
+    linear-gradient(to bottom,
     adjust-hsl(var(--color-secondary), 1, 1.35, 1.15) 0%,
     adjust-hsl(var(--color-secondary), 1, 1.15, 1.12) 26%,
-    adjust-hsl(var(--color-secondary), 1, 1, 1) 100%
-  );
-
-  // background: linear-gradient(
-  //   to bottom,
-  //   var(--color-secondary) 100%,
-  //   var(--color-secondary) 100%,
-  //   var(--color-secondary) 100%
-  // );
-
-  // background: linear-gradient(
-  //   to bottom,
-  //   var(--color-primary) 0%,
-  //   var(--color-secondary) 26%,
-  //   var(--color-tertiary) 100%
-  // );
-
-  // background: adjust-hsl(var(--color-secondary), 1, 1.35, 1.15);
-  // background: adjust-hsl(var(--color-secondary), 1, 1.15, 1.12);
-  // background: adjust-hsl(var(--color-secondary), 1, 1, 1);
-
-  // background: linear-gradient(
-  //   to bottom,
-  //   adjusthsla(var(--color-secondary), 1, 0.35, 0.15, 1) 0%,
-  //   adjusthsla(var(--color-secondary), 1, 0.15, 0.12, 1) 26%,
-  //   var(--color-secondary) 100%
-  // );
-
+    adjust-hsl(var(--color-secondary), 1, 1, 1) 100%);
   border-radius: 5px;
-  // color: $text-color;
-  color: lightness(var(--color-secondary), -0.1);
+  color: lightness(var(--color-secondary), 0.9);
   cursor: pointer;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 2em;
   font-weight: bold;
-  line-height: $height + px;
+  line-height: $button--height + px;
   text-decoration: none;
-  text-shadow: 0 -2px 0 darken($color, 20%),
-    0 1px 1px lightness(var(--color-secondary), 0.2);
-  transition: all ($button-speed + s) $timing-function;
-  zoom: 3;
+  text-shadow:
+    0 -2px 0 lightness(var(--color-secondary), 0.8),
+    0 1px 1px lightness(var(--color-secondary), 1.2);
+  transition: all ($button--speed + s) $button--timing-function;
+  zoom: 2;
+
+  &:visited {
+    color: lightness(var(--color-secondary), 0.9);
+  }
 }
 
 .button:hover {
-  background: linear-gradient(
-    to bottom,
-    lighten(saturate(lighten($color, 15%), 35%), $lighten-on-hover) 0%,
-    lighten(saturate(lighten($color, 12%), 15%), $lighten-on-hover) 26%,
-    lighten($color, $lighten-on-hover) 100%
-  );
-  // background: linear-gradient(
-  //   to bottom,
-  //   adjusthsla(var(--color-secondary), 1, 0.35, 0.15, 1) 0%,
-  //   adjusthsla(var(--color-secondary), 1, 0.15, 0.12, 1) 26%,
-  //   var(--color-secondary) 100%
-  // );
-
-  // background: linear-gradient(
-  //   to bottom,
-  //   saturate($color, 35%) 0%,
-  //   saturate($color, 15%) 26%,
-  //   $color 100%
-  // );
+  background:
+    linear-gradient(to bottom,
+    adjust-hsl(var(--color-secondary), 1, 1.35, 1.22) 0%,
+    adjust-hsl(var(--color-secondary), 1, 1.15, 1.19) 26%,
+    adjust-hsl(var(--color-secondary), 1, 1, 1.07) 100%);
 }
 
 .button:active {
-  top: $depth + px;
-  color: lightness(var(--color-secondary), 0.45);
-  text-shadow: 0 -2px 0 lightness(var(--color-secondary), 0),
-    0 1px 1px lightness(var(--color-secondary), 0.2), 0 0 4px white;
+  top: $button--depth + px;
+  color: lightness(var(--color-secondary), 1.45);
+  text-shadow:
+    0 -2px 0 lightness(var(--color-secondary), 1),
+    0 1px 1px lightness(var(--color-secondary), 1.2),
+    0 0 4px $color-white;
 
   &::before {
     top: 0;
-    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.7), 0 3px 9px rgba(0, 0, 0, 0.2);
+    box-shadow: $box-shadow--button---active;
   }
 }
 
 .button::before {
   position: absolute;
   z-index: -1;
-  top: ($depth) + px;
+  top: ($button--depth) + px;
   right: 0;
   left: 0;
   display: inline-block;
-  height: ($height) + px;
-  background: linear-gradient(
-    to top,
-    saturate(darken($color, 40%), 15%) 0%,
-    saturate(darken($color, 25%), 10%) $depth + px
-  );
+  height: ($button--height) + px;
+  background:
+    linear-gradient(to top,
+    adjust-hsl(var(--color-secondary), 1, 1.15, 0.6) 0%,
+    adjust-hsl(var(--color-secondary), 1, 1.1, 0.75) $button--depth + px);
   border-radius: 5px;
-  box-shadow: 0 1px 0 2px rgba(0, 0, 0, 0.3),
-    0 5px ($depth * 0.4 + px) rgba(0, 0, 0, 0.5),
-    0 ($depth * 1.8 + px) 9px rgba(0, 0, 0, 0.2);
+  box-shadow: $box-shadow--button---before;
   content: '';
-  transition: all (($button-speed * 1.3) + s) $timing-function;
+  transition: all (($button--speed * 1.3) + s) $button--timing-function;
 }
