--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -26,6 +26,9 @@ $filler--l: 2rem; // 32px
 $filler--xl: 3rem; // 48px
 $filler--xxl: 4rem; // 64px
 
+// #  Filler
+$center-me: 0 auto;
+
 // -  <<----------<< Box Dimension Sizes >>---------->>
 
 // #  Dimensions
