--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -176,7 +176,7 @@ button {
   font-variant: $font-variant--link;
   font-weight: $font-weight--link;
   letter-spacing: $letter-spacing--link;
-  line-height: $line-height--link;
+  text-align: $line-height--link;
   text-align: $text-align--link;
   text-decoration: none;
   text-transform: $text-transform--link;
