--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -5,3 +5,4 @@
 @import 'home-webshop/section-1--hero';
 @import 'home-webshop/section-2--hot-items';
 @import 'home-webshop/section-3--about';
+@import 'home-webshop/intermezzo';
